--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -77,6 +77,7 @@
 
 .presentation__form .newsletter-form {
     left: calc(50% - 225px);
+    bottom: 85px;
 
     max-width: 450px;
     width: 450px;
@@ -89,6 +90,26 @@
 }
 
 .presentation__form .newsletter-form button {
+    width: 40px;
+    height: 40px;
+}
+
+.cards__title {
+    font-size: 2rem;
+}
+
+.cards__card .card__title h2{
+    font-size: 1.8rem;
+}
+
+.cards__card .card__description {
+    font-size: 1.6rem;
+    font-weight: 500;
+}
+
+.cards__card .card__logo .card__logo_mobile,
+.cards__card .card__logo .card__logo_e-commerce,
+.cards__card .card__logo .card__logo_terminal {
     width: 40px;
     height: 40px;
 }
