--- a/styles/styles.css
+++ b/styles/styles.css
@@ -202,3 +202,62 @@ body {
     background-repeat: no-repeat;
     background-position: center;
 }
+
+.cards {
+    margin: 40px 0 100px 0;
+}
+
+.cards__title {
+    margin: 0 0 30px 0;
+}
+
+.cards__card {
+    padding: 16px;
+    margin: 0 0 30px 0;
+
+    background: #f9f9f9;
+    border-radius: 2px;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    box-shadow: 2px -1px 24px -16px rgba(0,0,0,1);
+    -webkit-box-shadow: 2px -1px 24px -16px rgba(0,0,0,1);
+    -moz-box-shadow: 2px -1px 24px -16px rgba(0,0,0,1);
+}
+
+.cards__title {
+    font-size: 1.6rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+.cards__card .card__title h2{
+    font-size: 1.6rem;
+}
+
+.cards__card .card__description {
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.cards__card .card__logo .card__logo_mobile {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background-image: url('../assets/icons/devices.svg');
+    background-size: contain;
+}
+
+.cards__card .card__logo .card__logo_e-commerce {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background-image: url('../assets/icons/shopping_cart.svg');
+    background-size: contain;
+}
+
+.cards__card .card__logo .card__logo_terminal {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background-image: url('../assets/icons/terminal.svg');
+    background-size: contain;
+}
