--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -136,3 +136,32 @@ body{
     background-image: url('../assets/icons/arrow_up-white.svg');
     background-size: contain;
 }
+
+.cards__title {
+    font-size: 1.8rem;
+}
+
+.cards__elements {
+    display: flex;
+    justify-content: space-between;
+}
+
+.cards__elements .cards__card {
+    max-width: 31%;
+}
+
+.cards__card .card__title h2{
+    font-size: 1.8rem;
+}
+
+.cards__card .card__description {
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.cards__card .card__logo .card__logo_mobile,
+.cards__card .card__logo .card__logo_e-commerce,
+.cards__card .card__logo .card__logo_terminal {
+    width: 36px;
+    height: 36px;
+}
