--- a/styles/styles.css
+++ b/styles/styles.css
@@ -406,9 +406,10 @@ main {
     color: var(--black);
 
     background: var(--white);
-    border: 1px solid var(--black);
+    border: 3px solid rgba(0, 0, 0, 0.05);
     /*border-image: linear-gradient(to right, var(--purple), darkorchid) 1;*/
     border-radius: 2px;
+    box-shadow: 2px 1px 24px 0.1px rgba(0, 0, 0, 0.11);
 }
 
 .contact .contact__form label input {
