--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -61,11 +61,11 @@ body {
     display: flex;
 }
 
-.presentation_skills {
+.presentation__skills {
     border-radius: 2px 0 0 2px;
 }
 
-.presentation_skills .presentation__amount {
+.presentation__skills .presentation__amount {
     max-height: 50px;
     font-size: 2.6rem;
 }
@@ -226,4 +226,21 @@ body {
     font-size: 1.6rem;
     font-weight: 500;
     text-align: justify;
+}
+
+.footer {
+    padding: 15px 20px 20px 20px;
+}
+
+.footer__logo {
+    font-size: 3.8rem;
+}
+
+.footer .footer__information .footer__social {
+    width: 40%;
+}
+
+.footer .footer__information .footer__social ul li,
+.footer .footer__information .footer__social ul li a {
+    font-size: 14px;
 }
